# SlicerRegularizedFastMarching

./: .gitignore  CMakeLists.txt  README.md  RegularizedFastMarching.py  SegmentationFastMarching.py
RegularizedFastMarching/: CMakeLists.txt  RegularizedFastMarching.py
RegularizedFastMarching/RegularizedFastMarchingLib/: Regularization.py
RegularizedFastMarching/Resources/: .gitignore
RegularizedFastMarching/Resources/SegmentationFastMarching/Seeds/: three.seed
RegularizedFastMarching/Resources/SegmentationFastMarching/SeedsLabels/: SeedsNamesLabels_binary.csv  SeedsNamesLabels_brain.csv  SeedsNamesLabels_ganglions.csv
RegularizedFastMarching/Resources/UI/: RegularizedFastMarching.ui
Resources/: .gitignore  CMakeLists.txt  Regularization.py  Segmentation.py
Resources/SegmentationFastMarching/Seeds/: FA.seed  three.seed
Resources/SegmentationFastMarching/SeedsLabels/: SeedsNamesLabels_binary.csv  SeedsNamesLabels_brain.csv  SeedsNamesLabels_ganglions.csv
